src/objects/APXT_CMTR__Conga_Merge_Template__c.object
<CustomObject>
    <description>Repository for merge templates to be used with Conga Merge.</description>
    <fields>
        <fullName>APXT_CMTR__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APXT_CMTR__Label_Template_Use_Detail_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For MassMerge Label Templates: This setting indicates to use ReportData (or QueryData) as the data source for Labels</inlineHelpText>
        <label>Label Template: Use Detail Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APXT_CMTR__Master_Field_to_Set_1__c</fullName>
        <description>You may update a field on the master record. The update occurs when the user Logs Activity, either from PointMerge or Mass Merge. 

Enter the API field name, an equals sign, and the value to set (with spaces replaced with plus signs). 

For example: 
Status__c=Completed 

A special case: 
Status_Date__c=Today 
You may set the value to &quot;Today&quot; to automatically insert the current date.</description>
        <inlineHelpText>Enter the API field name, an equals sign, and the value to set (with spaces replaced with plus signs). 

Examples: 
Status__c=Completed 
Status_Date__c=Today 
Stage__c=In+Progress</inlineHelpText>
        <label>Master Field to Set 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CMTR__Master_Field_to_Set_2__c</fullName>
        <label>Master Field to Set 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CMTR__Master_Field_to_Set_3__c</fullName>
        <label>Master Field to Set 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CMTR__Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CMTR__Template_Group__c</fullName>
        <inlineHelpText>Identify the group name to which this template belongs.  Used in conjunction with the &quot;&amp;TemplateGroup=&quot; parameter in PointMerge.</inlineHelpText>
        <label>Template Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CMTR__Template_Type__c</fullName>
        <label>Template Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>Label</fullName>
                </value>
                <value>
                    <fullName>Envelope</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Conga Merge Template</label>
    <listViews>
        <fullName>APXT_CMTR__All</fullName>
        <columns>NAME</columns>
        <columns>APXT_CMTR__Name__c</columns>
        <columns>APXT_CMTR__Template_Type__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Merge Templates</label>
    </listViews>
    <nameField>
        <displayFormat>CMT-{00000}</displayFormat>
        <label>Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Merge Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>